# pycountsac

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycountsac/: __init__.py  datasets.py  plottingac.py
tests/: test_pycountsac.py
