[tool.poetry]
name = "pycountsac"
version = "0.1.1"
description = "Conta quantidade de palavras em um documento de texto!"
authors = ["Alfredo Carneiro"]
license = "MIT"
readme = "README.md"
include = ["tests/*", "CHANGELOG.md"]


[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
jupyter = "^1.0.0"
myst-nb = {version = "^1.1.0", python = "^3.9"}
sphinx-autoapi = "^3.1.1"
sphinx-rtd-theme = "^2.0.0"
python-semantic-release = "^7.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"
dist_path = "dist/"
upload_to_pypi = false
remove_dist = false